--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,4 @@ before_install:
     - sudo apt-get -qq update
     - sudo apt-get install -y libfuse-dev
 script: make griffin && ./griffin -h
+dist: trusty
