--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: cpp
 before_install:
     - sudo apt-get -qq update
     - sudo apt-get install -y libfuse-dev
-script: make griffin && ./griffin -h
+script: make griffin
 dist: trusty
